# dash-camera-safety-monitoring

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  start.py
.claude/: settings.json
.claude/hooks/: check-edit.sh  hooks.json
.claude/rules/: frontend.md  python.md
.github/workflows/: ci.yml
cloud/: receiver.py
data/: shadow_records.jsonl
data/corpus/: following_distance.md  pedestrian_right_of_way.md  road_policy.md
data/test_suite/: README.md  example_manifest.json
docs/: Analysis Presentation - Brief.md  Analysis Presentation - v.1.0.md  architecture.md  backend-infrastructure.md  challenges.md  frontend-infrastructure.md  integration-infrastructure.md
docs/improvements/: README.md  backend-execution-plan.md  backend.md  code-review.md  frontend-execution-plan.md  frontend.md  integration.md  production-scale-plan.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
road_safety/: __init__.py  config.py  logging.py  security.py  server.py  settings_spec.py  settings_store.py
tests/: conftest.py  test_adaptive_fps.py  test_api.py  test_compliance.py  test_config.py  test_core.py  test_demo_track_window.py  test_integrations.py  test_orientation_policy.py  test_security.py  test_services.py  test_settings_api.py  test_settings_impact.py  test_settings_store.py  test_settings_templates.py  test_shadow_store.py  test_validator.py  test_video_metadata.py
tools/: README.md  analyze.py  eval_detect.py  eval_enrich.py
(+207 files in other folders)
